--- a/recipes/Adobo.html
+++ b/recipes/Adobo.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adobong Manok Recipe</title>
 </head>
+
 <body>
   <h1>Adobong Manok</h1>
   <br>
@@ -33,7 +35,10 @@
     <li>Add the bay leaves and water, and bring the mixture to a boil.</li>
     <li>Reduce the heat to low and simmer, covered, for 30-40 minutes or until the chicken is cooked through.</li>
     <li>Remove the bay leaves and serve the Adobong Manok hot with steamed rice.</li>
-    <li>Note: You can also cook the Adobong Manok in a slow cooker. Brown the chicken and cook the garlic and ginger in a pan, then transfer everything to the slow cooker with the remaining ingredients and cook on low for 6-8 hours.</li>
+    <li>Note: You can also cook the Adobong Manok in a slow cooker. Brown the chicken and cook the garlic and ginger in
+      a pan, then transfer everything to the slow cooker with the remaining ingredients and cook on low for 6-8 hours.
+    </li>
   </ul>
 </body>
+
 </html>
