--- a/recipes/Lasagna.html
+++ b/recipes/Lasagna.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lasagna Recipe</title>
 </head>
+
 <body>
   <h1>Lasagna</h1>
   <br>
@@ -29,17 +31,23 @@
   <ol>
     <li>Preheat oven to 375°F (190°C).</li>
     <li>Cook lasagna noodles according to package instructions. Drain and set aside.</li>
-    <li>In a large skillet, cook ground beef over medium-high heat until browned, breaking it up into small pieces as it cooks.</li>
+    <li>In a large skillet, cook ground beef over medium-high heat until browned, breaking it up into small pieces as it
+      cooks.</li>
     <li>Add chopped onion and minced garlic to the skillet and cook until the onion is translucent.</li>
-    <li>Stir in marinara sauce and bring to a simmer. Reduce heat to low and let sauce simmer while you prepare the cheese mixture.</li>
+    <li>Stir in marinara sauce and bring to a simmer. Reduce heat to low and let sauce simmer while you prepare the
+      cheese mixture.</li>
     <li>In a medium bowl, combine ricotta cheese, egg, salt, and pepper. Mix well to combine.</li>
-    <li>Spread a layer of the meat sauce in the bottom of a 9x13-inch baking dish. Arrange 4 lasagna noodles on top of the sauce.</li>
-    <li>Spread half of the ricotta cheese mixture over the noodles, followed by half of the shredded mozzarella cheese.</li>
+    <li>Spread a layer of the meat sauce in the bottom of a 9x13-inch baking dish. Arrange 4 lasagna noodles on top of
+      the sauce.</li>
+    <li>Spread half of the ricotta cheese mixture over the noodles, followed by half of the shredded mozzarella cheese.
+    </li>
     <li>Repeat the layers, starting with the meat sauce, noodles, ricotta cheese mixture, and mozzarella cheese.</li>
     <li>Top the final layer of mozzarella cheese with the grated Parmesan cheese.</li>
     <li>Cover the baking dish with aluminum foil and bake for 30 minutes.</li>
     <li>Remove the foil and bake for an additional 10-15 minutes, or until the cheese is melted and bubbly.</li>
-    <li>Let the lasagna rest for 10-15 minutes before slicing and serving. Garnish with chopped fresh basil leaves, if desired.</li>
+    <li>Let the lasagna rest for 10-15 minutes before slicing and serving. Garnish with chopped fresh basil leaves, if
+      desired.</li>
   </ol>
 </body>
+
 </html>
